--- a/Style.css
+++ b/Style.css
@@ -25,7 +25,7 @@ float: right;
 width: 428px;
 padding-left: 20px;
 margin: 0 0 20px 0px;
-//border-left: 1px dotted #000;
+border-left: 1px dotted #000;
 }
 
 section h2 {
@@ -44,7 +44,7 @@ width:940px;
 height: 100px;
 padding: 10px;
 color:#200f08 ;
-//border-top: 1px dotted #000;
+border-top: 1px dotted #000;
 background:#fff;
 }
 
